
    - Fixed segmentation fault on x64 platforms when trying to extract RAR
      archives with libunrar.

    - The lens now uses the original pixbuf when preparing the magnified image
      instead of the already scaled pixbuf that is shown in MComix' display
      area. In addition, fixed zero division error when trying to use the lens
      on images with width greatly exceeding height.

    - Menu item hotkeys can now be changed by hovering over a menu item with
      the mouse and pressing the desired key, or key combination.
      (by Juha Sahakangas and Alan Horkan)

    - All other hotkeys (such as keys for scrolling or zooming) can now be
      customized by editing keybindings.conf in MComix' configuration
      directory, i.e. ~/.config/mcomix on Linux or %HOMEPATH%/MComix on
      Windows.

    - Removed error nag box that would pop up after program shutdown on
      Windows occasionally.

    - The order in which files are loaded and displayed can now be customized
      in the "Advanced" tab of the preferences dialog. Files can be sorted
      either by name, file size, or by last-modified date. This change does
      not affect ordering of files inside archives.
      (by C Nelson)

    - RAR password support now requires LibUnrar 4.

    - Updated Italian translation (by Giovanni Scafora).

MComix 0.96
Release date: 24.12.2011

    - Opening a RAR archive with 7z would destroy the archive, leaving only
      a 0-byte file. This has been fixed.

    - Fixed MComix opening files in other directories after scrolling past the
      first page, even when "Automatically open next directory" was disabled.

    - Fixed a bug that would hang MComix when trying to open a
      password-protected RAR archive.

    - MComix no longer restores the last opened file when it was terminated
      abnormally.

    - Files opened outside of archives are now naturally sorted (e.g. 1.jpg,
      2.jpg, 10.jpg instead of 1.jpg, 10.jpg, 2.jpg). Before, only images